# jmarkov

./: .buildinfo  .gitignore  Makefile  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
_sources/: index.rst.txt  usage.rst.txt
docs/: requirements.txt
docs/source/: conf.py  usage.rst
examples/: Segundo_momento_error_rho.ipynb  drivethru.py  example_ctmc_2states.ipynb  example_ctmc_2states.py  example_ctmc_MM1K.ipynb  example_ctmc_reliability.ipynb  msplitmerge.py  segundo_momento_error_rho.py  simple2_phph1.py  simple_ctbd.py  simple_ctmc.py  simple_ctph.py  simple_ctph_pdf.py  simple_dtmc.py  simple_dtmc_b.py  simple_dtph.py  simple_mmk.py  simple_mmkn.py  simple_moments2_ctph.py  simple_phph1.py  temp_phph1_sm.py
examples/ctmc_problem_examples/: ctmc_autoselectricos_BuildRS.py  ctmc_complementaria4_corrosion_BuildRS.py  ctmc_complementaria_hospital_BuildRS.py  ctmc_ejemploabsorbentes_BuildRS.py  ctmc_elefantes_BuildRS.py  ctmc_main.tex  ctmc_renBike_BuildRS.py
examples/dtmc_problem_examples/: dtmc_main.tex
examples/dtmdp_problems_examples/: mdp_main.tex
examples/problems_examples_tex/: main.tex
jmarkov/: ctbd.py  ctmc.py  dtmc.py  dtmdp.py  event.py  finite_ctbd.py  markov_chain.py  markovprocess.py  matrix_utils.py  simple_ctmc.py  simple_dtmc.py  state.py  transition.py
jmarkov/mdp/: dtmdp.py
tests/: tests_ctbd.py  tests_ctmc.py  tests_ctph.py  tests_dtmc.py  tests_dtmdp  tests_dtmdp.py  tests_dtsdp.py  tests_mmk.py  tests_mmkn.py  tests_phph1.py
(+45 files in other folders)
