[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmarkov"
version = "0.2.0"
authors = [
  { name="Juan F Perez", email="juanfernando.perez@gmail.com" },
]
description = "A python package for Markov chain modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "typing"
]


[project.urls]
homepage = "https://github.com/copa-uniandes/jmarkov"
documentation = "https:/https://jmarkov.readthedocs.io/en/latest/"
source = "https://github.com/copa-uniandes/jmarkov"
download = "https://pypi.org/project/jmarkov/"
tracker = "https://github.com/copa-uniandes/jmarkov/issues"